--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Atix",
   "license": "AGPL-3.0",
   "dependencies": {
-    "moc-governance": "git+ssh://git@gitlab.com/atixlabs/moc---gobernanza.git#v0.3.1",
+    "moc-governance": "git+ssh://git@github.com:money-on-chain/Areopagus-Governance.git#v0.3.1",
     "openzeppelin-eth": "2.1.3",
     "openzeppelin-solidity": "2.3.0",
     "zos": "2.3.1",
