--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "openzeppelin-test-helpers": "0.4.0",
     "prettier": "1.18.2",
     "solidity-coverage": "0.6.4",
+    "standard-version": "7.1.0",
     "truffle": "5.0.26",
     "truffle-hdwallet-provider": "1.0.13",
     "web3": "1.0.0-beta.55"
