HDProvider on regtest throws error use default wallet instead See https://github.com/trufflesuite/truffle/issues/2016#issuecomment-492321475 Also added rsk regtest as a network

--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -33,6 +33,33 @@
     "maxMintBPro": 0.05,
     "mocProportion": 0.01
   },
+  "regtest": {
+    "initialPrice": 7800,
+    "initialEma": 7800,
+    "dayBlockSpan": 20,
+    "settlementDays": 90,
+    "gas": 99999999,
+    "startStoppable": false,
+    "btcxTmin": 0.000133681,
+    "btcxPower": 4,
+    "btcxTmax": 0.004,
+    "bitProHolderRate": 0.000047945,
+    "daysBitProHolderExecutePayment": 7,
+    "targetAddressBitProInterest": "",
+    "targetAddressCommissionPayment": "",
+    "commissionRate": 0.002,
+    "docTmin": 0.000133681,
+    "docPower": 4,
+    "docTmax": 0.004,
+    "c0Cobj": 4,
+    "x2Cobj": 2,
+    "liq": 1.04,
+    "utpdu": 2,
+    "maxDiscRate": 0.5,
+    "smoothFactor": 0.01653,
+    "maxMintBPro": 0.05,
+    "mocProportion": 0.01
+  },
   "qaTestnet": {
     "governor": "0xD63C0441b9A6c019917e9773992F7B5428542cbb",
     "moc": "0x9A9ad90344B854b03E82c0bdddf6BF1aB4BF37A1",
