--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -94,6 +94,7 @@
     "governor": "0x9258531274B945eB628656F4b30e8216938A619C",
     "stopper": "0x0BE712DD242BF133417f6e389436783Fccb62e9e",
     "proxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
+    "mocOracle": "",
     "initialPrice": 11500,
     "initialEma": 9450,
     "dayBlockSpan": 2880,
