--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "truffle": "5.0.26",
     "truffle-hdwallet-provider": "1.0.13",
     "web3": "1.0.0-beta.55"
+  },
+  "engines": {
+    "node": "=8.12.0"
   }
 }
