Fixed Bpro minting and DoC minting tests

--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -14,7 +14,7 @@
     "uppercase": "off",
     "visibility-first": "error",
     "arg-overflow": ["warning", 6],
-
+    "no-experimental": "off",
     "security/enforce-explicit-visibility": ["error"],
     "security/no-block-members": ["warning"],
     "security/no-inline-assembly": ["warning"],
