--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -4,7 +4,26 @@
     "initialEma": 10000,
     "dayBlockSpan": 20,
     "settlementDays": 100,
-    "gas": 99999999
+    "gas": 99999999,
+    "startStoppable": false,
+    "btcxTmin": 0.000133681,
+    "btcxPower": 4,
+    "btcxTmax": 0.004,
+    "bitProHolderRate": 0.000047945,
+    "daysBitProHolderExecutePayment": 7,
+    "targetAddressBitProInterest": "",
+    "targetAddressCommissionPayment": "",
+    "docTmin": 0.000133681,
+    "docPower": 4,
+    "docTmax": 0.004,
+    "c0Cobj": 4,
+    "x2Cobj": 2,
+    "liq": 1.04,
+    "utpdu": 2,
+    "maxDiscRate": 0.5,
+    "smoothFactor": 0.01653,
+    "maxMintBPro": 0.05,
+    "mocProportion": 0.01
   },
   "development": {
     "initialPrice": 7800,
