Modified MoCVendors and MoCVendorsChanger; Modified other files in consequence

--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -23,8 +23,7 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01,
-    "daysToResetVendor": 7
+    "mocProportion": 0.01
   },
   "development": {
     "initialPrice": 7800,
@@ -50,8 +49,7 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01,
-    "daysToResetVendor": 7
+    "mocProportion": 0.01
   },
   "regtest": {
     "initialPrice": 7800,
@@ -77,8 +75,7 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01,
-    "daysToResetVendor": 7
+    "mocProportion": 0.01
   },
   "qaTestnet": {
     "governor": "0xD63C0441b9A6c019917e9773992F7B5428542cbb",
@@ -106,8 +103,7 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01,
-    "daysToResetVendor": 7
+    "mocProportion": 0.01
   },
   "rskTestnet": {
     "oracle": "0x667bd3d048FaEBb85bAa0E9f9D87cF4c8CDFE849",
@@ -138,7 +134,6 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 20,
-    "mocProportion": 0.01,
-    "daysToResetVendor": 7
+    "mocProportion": 0.01
   }
 }
