--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -31,7 +31,9 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5
   },
   "regtest": {
     "initialPrice": 7800,
@@ -58,36 +60,9 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 0.05,
-    "mocProportion": 0.01
-  },
-  "qaTestnet": {
-    "governor": "0xD63C0441b9A6c019917e9773992F7B5428542cbb",
-    "moc": "0x9A9ad90344B854b03E82c0bdddf6BF1aB4BF37A1",
-    "initialPrice": 7800,
-    "initialEma": 7800,
-    "dayBlockSpan": 20,
-    "settlementDays": 90,
-    "gas": 99999999,
-    "startStoppable": false,
-    "btcxTmin": 0.000133681,
-    "btcxPower": 4,
-    "btcxTmax": 0.004,
-    "bitProHolderRate": 0.000047945,
-    "daysBitProHolderExecutePayment": 7,
-    "targetAddressBitProInterest": "",
-    "targetAddressCommissionPayment": "",
-    "commissionRate": 0.002,
-    "docTmin": 0.000133681,
-    "docPower": 4,
-    "docTmax": 0.004,
-    "c0Cobj": 4,
-    "x2Cobj": 2,
-    "liq": 1.04,
-    "utpdu": 2,
-    "maxDiscRate": 0.5,
-    "smoothFactor": 0.01653,
-    "maxMintBPro": 0.05,
-    "mocProportion": 0.01
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5
   },
   "rskTestnet": {
     "oracle": "0x667bd3d048FaEBb85bAa0E9f9D87cF4c8CDFE849",
@@ -118,6 +93,41 @@
     "maxDiscRate": 0.5,
     "smoothFactor": 0.01653,
     "maxMintBPro": 20,
-    "mocProportion": 0.01
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5
+  },
+  "rskMainnet": {
+    "oracle": "0x667bd3d048FaEBb85bAa0E9f9D87cF4c8CDFE849",
+    "governor": "0x9258531274B945eB628656F4b30e8216938A619C",
+    "stopper": "0x0BE712DD242BF133417f6e389436783Fccb62e9e",
+    "proxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
+    "initialPrice": 11500,
+    "initialEma": 9450,
+    "dayBlockSpan": 2880,
+    "settlementDays": 30,
+    "gas": 6000000,
+    "startStoppable": false,
+    "btcxTmin": 0.000133681,
+    "btcxPower": 4,
+    "btcxTmax": 0.004,
+    "bitProHolderRate": 0.000047945,
+    "daysBitProHolderExecutePayment": 7,
+    "targetAddressBitProInterest": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "targetAddressCommissionPayment": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "commissionRate": 0.002,
+    "docTmin": 0.000133681,
+    "docPower": 4,
+    "docTmax": 0.004,
+    "c0Cobj": 4,
+    "x2Cobj": 2,
+    "liq": 1.04,
+    "utpdu": 2,
+    "maxDiscRate": 0.5,
+    "smoothFactor": 0.01653,
+    "maxMintBPro": 20,
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5
   }
 }
