--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ jobs:
       steps:
         - checkout
         - node/install:
-            install-yarn: true
             node-version: 8.12.0
+            npm-version: 6.14.11
         - run: node --version
         - run: sudo apt-get update
         - run: sudo apt-get install make gcc g++ python git bash
@@ -17,7 +17,7 @@ jobs:
         - run: npm run eslint
 
 orbs:
-  node: circleci/node@2.0.0
+  node: circleci/node@4.1.0
 
 workflows:
     build-and-test:
