--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "deploy-reset-development": "rm zos.dev-*.json; rm -r build/contracts; npx truffle migrate --network development --reset",
     "deploy-reset-regtest": "rm zos.dev-*.json; rm -r build/contracts; cat zos.json.empty > zos.json; npx truffle migrate --network regtest --reset",
     "deploy-reset-testnet": "rm zos.dev-*.json; rm -r build/contracts; cat zos.json.empty > zos.json; npx truffle migrate --network rskTestnet --reset",
-    "contract-size": "npx truffle compile; node calcSize.js"
+    "contract-size": "npx truffle compile; node calcSize.js",
+    "docgen": "npx solidoc"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   "author": "Atix",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@thinkanddev/solidoc": "^2.0.0",
     "moc-governance": "git+ssh://git@github.com:money-on-chain/Areopagus-Governance.git#v0.3.1",
     "openzeppelin-eth": "2.1.3",
     "openzeppelin-solidity": "2.3.0",
@@ -65,6 +67,6 @@
     "web3": "1.0.0-beta.55"
   },
   "engines": {
-    "node": "=8.12.0"
+    "node": "=8.17.0"
   }
 }
