Added check of implementation addresses after deploy

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,6 @@ build/contracts
 mnemonic.txt
 
 # deploy config files
-deployConfig-development.json
-deployConfig-coverage.json
-deployConfig-regtest.json
+deployConfig-development*.json
+deployConfig-coverage*.json
+deployConfig-regtest*.json
