Fixed deploy scripts: saveConfig path, changes due to MoCVendors after audit comments

--- a/scripts/deploy/20210308/deployConfig-example-original.json
+++ b/scripts/deploy/20210308/deployConfig-example-original.json
@@ -42,8 +42,7 @@
     },
     "liquidationEnabled": "",
     "protected": "",
-    "vendorMoCDepositAddress": "",
-    "vendorRequiredMoCs": ""
+    "vendorGuardianAddress": ""
   },
   "changerAddresses": { }
 }
