--- a/scripts/deploy/20210308/deployConfig-example.json
+++ b/scripts/deploy/20210308/deployConfig-example.json
@@ -42,8 +42,7 @@
     },
     "liquidationEnabled": "",
     "protected": "",
-    "vendorMoCDepositAddress": "",
-    "vendorRequiredMoCs": ""
+    "vendorGuardianAddress": ""
   },
   "changerAddresses": { }
 }
