--- a/migrations/configs/config.json
+++ b/migrations/configs/config.json
@@ -223,5 +223,101 @@
       "MINT_BTCX_FEES_MOC": 0.001,
       "REDEEM_BTCX_FEES_MOC": 0.001
     }
+  },
+  "rskAlphaTestnet": {
+    "oracle": "0x26a00aF444928d689DDEC7b4D17c0E4a8c9D407d",
+    "governor": "0x9258531274B945eB628656F4b30e8216938A619C",
+    "stopper": "0x0BE712DD242BF133417f6e389436783Fccb62e9e",
+    "proxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
+    "initialPrice": 56000,
+    "initialEma": 35000,
+    "dayBlockSpan": 2880,
+    "settlementDays": 30,
+    "gas": 6900000,
+    "startStoppable": false,
+    "btcxTmin": 0.000133681,
+    "btcxPower": 4,
+    "btcxTmax": 0.004,
+    "bitProHolderRate": 0.000047945,
+    "daysBitProHolderExecutePayment": 7,
+    "targetAddressBitProInterest": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "targetAddressCommissionPayment": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "commissionRate": 0.002,
+    "docTmin": 0.000133681,
+    "docPower": 4,
+    "docTmax": 0.004,
+    "c0Cobj": 4,
+    "x2Cobj": 2,
+    "liq": 1.04,
+    "utpdu": 2,
+    "maxDiscRate": 0.5,
+    "smoothFactor": 0.01653,
+    "maxMintBPro": 20000,
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5,
+    "vendorGuardianAddress": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "commissionRates": {
+      "MINT_BPRO_FEES_RBTC": 0.001,
+      "REDEEM_BPRO_FEES_RBTC": 0.001,
+      "MINT_DOC_FEES_RBTC": 0.001,
+      "REDEEM_DOC_FEES_RBTC": 0.001,
+      "MINT_BTCX_FEES_RBTC": 0.001,
+      "REDEEM_BTCX_FEES_RBTC": 0.001,
+      "MINT_BPRO_FEES_MOC": 0.001,
+      "REDEEM_BPRO_FEES_MOC": 0.001,
+      "MINT_DOC_FEES_MOC": 0.001,
+      "REDEEM_DOC_FEES_MOC": 0.001,
+      "MINT_BTCX_FEES_MOC": 0.001,
+      "REDEEM_BTCX_FEES_MOC": 0.001
+    }
+  },
+  "rskAlphaTestnet3": {
+    "oracle": "0x26a00aF444928d689DDEC7b4D17c0E4a8c9D407d",
+    "governor": "0x9258531274B945eB628656F4b30e8216938A619C",
+    "stopper": "0x0BE712DD242BF133417f6e389436783Fccb62e9e",
+    "proxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
+    "initialPrice": 56000,
+    "initialEma": 35000,
+    "dayBlockSpan": 2880,
+    "settlementDays": 30,
+    "gas": 6900000,
+    "startStoppable": false,
+    "btcxTmin": 0.000133681,
+    "btcxPower": 4,
+    "btcxTmax": 0.004,
+    "bitProHolderRate": 0.000047945,
+    "daysBitProHolderExecutePayment": 7,
+    "targetAddressBitProInterest": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "targetAddressCommissionPayment": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "commissionRate": 0.002,
+    "docTmin": 0.000133681,
+    "docPower": 4,
+    "docTmax": 0.004,
+    "c0Cobj": 4,
+    "x2Cobj": 2,
+    "liq": 1.04,
+    "utpdu": 2,
+    "maxDiscRate": 0.5,
+    "smoothFactor": 0.01653,
+    "maxMintBPro": 20,
+    "mocProportion": 0.01,
+    "liquidationEnabled": false,
+    "protected": 1.5,
+    "vendorGuardianAddress": "0xf69287F5Ca3cC3C6d3981f2412109110cB8af076",
+    "commissionRates": {
+      "MINT_BPRO_FEES_RBTC": 0.001,
+      "REDEEM_BPRO_FEES_RBTC": 0.001,
+      "MINT_DOC_FEES_RBTC": 0.001,
+      "REDEEM_DOC_FEES_RBTC": 0.001,
+      "MINT_BTCX_FEES_RBTC": 0.001,
+      "REDEEM_BTCX_FEES_RBTC": 0.001,
+      "MINT_BPRO_FEES_MOC": 0.001,
+      "REDEEM_BPRO_FEES_MOC": 0.001,
+      "MINT_DOC_FEES_MOC": 0.001,
+      "REDEEM_DOC_FEES_MOC": 0.001,
+      "MINT_BTCX_FEES_MOC": 0.001,
+      "REDEEM_BTCX_FEES_MOC": 0.001
+    }
   }
 }
