--- a/scripts/deploy/20210308/deployConfig-rskAlphaTestnet.json
+++ b/scripts/deploy/20210308/deployConfig-rskAlphaTestnet.json
@@ -7,23 +7,23 @@
     "MoCInrate": "0x8CA7685F69B4bb96D221049Ac84e2F9363ca7F2c",
     "MoCConverter": "0x0fC4b4eac059933755323bC5c44A06e2Fcccd425",
     "MoCState": "0xfb526c0Ace90f52049691389B040a33D03343eb7",
-    "MoCVendors": ""
+    "MoCVendors": "0x7F814742f1094e0A0Df0F3c7d6E0478BF04B60C3"
   },
   "implementationAddresses": {
-    "MoC": "",
+    "MoC": "0xF01a6ADa6eacD0D918443D4Ec43C866BcEf0Eb60",
     "MoCConnector": "",
-    "MoCExchange": "",
-    "MoCSettlement": "",
-    "MoCInrate": "",
-    "MoCConverter": "",
-    "MoCState": "",
+    "MoCExchange": "0x863F50de551a1A86DF7953e719fCa52B5C38DA24",
+    "MoCSettlement": "0x973991e6F81F70E7bDBC2e1263bf09833BA98402",
+    "MoCInrate": "0x67b92Fde8b7f4B6dCc9C19c37E443F6cEa9a405a",
+    "MoCConverter": "0xf0d4AAd586fD532CF6D1D56f413f443F795Da6B1",
+    "MoCState": "0x0eEFff9e26dA4Af55ac996782d8A0cC6CB36C047",
     "ProxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
     "UpgradeDelegator": "0x00a47D7d7B9bD22e0A862908EC493bDE893f627B",
     "Governor": "0x9258531274B945eB628656F4b30e8216938A619C",
     "MoCToken": "0x0399c7F7B37E21cB9dAE04Fb57E24c68ed0B4635",
     "MoCPriceProvider": "0xE972c8E83A5b97bB4FC867855A0aA13EF96f228D",
-    "MoCVendors": "",
-    "MoCHelperLib": ""
+    "MoCVendors": "0x3fcf56DCCFC10254a263193a4777dbF13f23776E",
+    "MoCHelperLib": "0xddFC5aEe208B773CD75DF8270cc60bC8E33f7CD5"
   },
   "valuesToAssign": {
     "commissionRates": {
@@ -42,7 +42,16 @@
     },
     "liquidationEnabled": false,
     "protected": "1.5",
-    "vendorGuardianAddress": "0xAb242e50E95C2f539242763A4eD5Db1aEE5ce461"
+    "vendorGuardianAddress": "0xab242e50e95c2f539242763a4ed5db1aee5ce461"
   },
-  "changerAddresses": {}
+  "changerAddresses": {
+    "3_MoC": "0x353DAD5d4eAd6BC1aB2a4B92c5B44229d8B6E046",
+    "4_MoCExchange": "0xD38A89838607D965DAE2150065501c29bEE691c1",
+    "5_MoCSettlement": "0xDf425e2f84776454A3bA4b9f0f35D26cA24DD9Dc",
+    "6_MoCInrate": "0x52e915d31628FF142F936fC1dA33A5aC492E3e42",
+    "6_MoCInrateChangerDeploy": "0xa6D2cC72f3d0F4Ad60fc12580016A2CA17EA5edA",
+    "7_MoCConverter": "0x54aA808C1cc3BF469B715bdf211701bE3B28e6A0",
+    "8_MoCState": "0x7d59b78c3c219ac5b650e13A752f58456BcaA18e",
+    "9_MoCStateChangerDeploy": "0xE7cf8D1787ee8e899a4474bDC341710921467b51"
+  }
 }
