--- a/scripts/deploy/20210308/deployConfig-rskAlphaTestnet.json
+++ b/scripts/deploy/20210308/deployConfig-rskAlphaTestnet.json
@@ -7,23 +7,23 @@
     "MoCInrate": "0x8CA7685F69B4bb96D221049Ac84e2F9363ca7F2c",
     "MoCConverter": "0x0fC4b4eac059933755323bC5c44A06e2Fcccd425",
     "MoCState": "0xfb526c0Ace90f52049691389B040a33D03343eb7",
-    "MoCVendors": "0x9945B9CC92E915d7E633f8573C11d8AbCD6Ed39C"
+    "MoCVendors": "0x2AF4dc2ad5B2904bFf1AA311293bbA27ACda82D5"
   },
   "implementationAddresses": {
-    "MoC": "0x4F990BacBbC4Ce5602ced18681270BD698EaF058",
+    "MoC": "0x680973a929293955e87CFdc01db762F26e5fc528",
     "MoCConnector": "",
-    "MoCExchange": "0xcd8EFD4D8C87eB70D1eBB7fb43d0b20Cd36fE3B1",
-    "MoCSettlement": "0x6656eb834613Ca8e9159acd92894bc4bFf4F4B88",
-    "MoCInrate": "0x6c62F01f937D70b138ebEa260DB947D50a55f54A",
-    "MoCConverter": "0x6137a496138DCA3278A69144e8976753be7687E2",
-    "MoCState": "0xEdB0B1D46c77446717A14c5Eb916C46A88499380",
+    "MoCExchange": "0xdbfA4d015A876C53C6AbBA8814332F7193B36D16",
+    "MoCSettlement": "0xE8F774b162AD4B89c0f39F4387Ce867653f9aaeD",
+    "MoCInrate": "0x86302F03B7703f3D84d139A67149383672328188",
+    "MoCConverter": "0x4F1797CB50cD36494Fd2E339Fa56CC3cAAaEb4Bc",
+    "MoCState": "0x2bcbF3c935a381ea80843db59626a28A2e8135be",
     "ProxyAdmin": "0xcc8fb7E8666F3bEe51511235753406f96C16E26b",
     "UpgradeDelegator": "0x00a47D7d7B9bD22e0A862908EC493bDE893f627B",
     "Governor": "0x9258531274B945eB628656F4b30e8216938A619C",
     "MoCToken": "0x0399c7F7B37E21cB9dAE04Fb57E24c68ed0B4635",
     "MoCPriceProvider": "0xE972c8E83A5b97bB4FC867855A0aA13EF96f228D",
-    "MoCVendors": "0x0F0e1B645BE13baaE844B94FEfe56BAce18b3dbb",
-    "MoCHelperLib": "0xEaCcD35dFf10A0B917cDbe80B8d7237A05F9579d"
+    "MoCVendors": "0x3F46C0638031eA645CDE666971436fd309a5Ae96",
+    "MoCHelperLib": "0xE1714a94938A95181B32c20152a7CABCB1B5c06D"
   },
   "valuesToAssign": {
     "commissionRates": {
@@ -45,14 +45,14 @@
     "vendorGuardianAddress": "0xab242e50e95c2f539242763a4ed5db1aee5ce461"
   },
   "changerAddresses": {
-    "3_MoC": "0xA78bcFC971724A5B647BFe7085313A454a7B54d6",
-    "4_MoCExchange": "0x6a23F5D0bcCA1C4FA591E72505668aAD58e36bEA",
-    "5_MoCSettlement": "0x8e102aa916847415099ef7C1D4D19784C47607F6",
-    "6_MoCInrate": "0xdb1bc1eB44CAeCB8EfF7f99acb9DCCdA2Eb7C64C",
-    "6_MoCInrateChangerDeploy": "0xa6f471527072d60C276D9b4264716b6de5264578",
-    "7_MoCConverter": "0x97D49BfEC5dcf893ec5683Ac1667f509a0307056",
-    "8_MoCState": "0x205D6DE6Aaf640DaC519bfFF9951Dc63B9C6cE5a",
-    "9_MoCStateChangerDeploy": "0x4275e23D1bf6e5267988B3A57d3fcaF7D9a8B316",
-    "5_MoCSettlementChangerDeploy": "0x263d2CF7C94b291d1F2D64A2DeB2e2928b3fDc17"
+    "3_MoC": "0xf2F36f949aa819644e8bb808B39691cdCe2311d7",
+    "4_MoCExchange": "0x9DDde4Df61E2b983825dABC7d77fC0d6Fa9f28E9",
+    "5_MoCSettlement": "0xdA82870F23A71b1582f8Ca81Fe560a24c7dc1AB9",
+    "5_MoCSettlementChangerDeploy": "0xD9a6DFE560e132bccB5fab3CB7f1C702CfA24E50",
+    "6_MoCInrate": "0xf2e9DbB7069b3511EAA67Ad799f29e7d9dc7F406",
+    "6_MoCInrateChangerDeploy": "0x6831F57a63aB15D452cAeE31EcEAb78b706AD2De",
+    "7_MoCConverter": "0xc28aCA24A16761610DE4293FEE42e9e3c602B580",
+    "8_MoCState": "0x4d7c2515b6c6eC94012411f6451e79d18240a20B",
+    "9_MoCStateChangerDeploy": "0x3506173ab9ac276498814C6D6a3aFe9cE31d458D"
   }
 }
