--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@thinkanddev/solidoc": "^2.0.0",
+    "eth-gas-reporter": "^0.2.22",
     "moc-governance": "git+ssh://git@github.com:money-on-chain/Areopagus-Governance.git#v0.3.1",
     "openzeppelin-eth": "2.1.3",
     "openzeppelin-solidity": "2.3.0",
