--- a/.soliumrc.json
+++ b/.soliumrc.json
@@ -18,6 +18,8 @@
     "security/enforce-explicit-visibility": ["error"],
     "security/no-block-members": ["warning"],
     "security/no-inline-assembly": ["warning"],
-    "security/no-send": ["warning"]
+    "security/no-send": ["warning"],
+    "function-order": "off",
+    "mixedcase": "off"
   }
 }
