--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "money-on-chain",
-  "version": "0.1.12",
+  "version": "0.1.14",
   "private": true,
   "homepage": "https://github.com/money-on-chain/main-RBTC-contract",
   "description": "Money On Chain - Main RBTC Contract",
@@ -38,7 +38,7 @@
   "dependencies": {
     "@thinkanddev/solidoc": "^3.0.1",
     "eth-gas-reporter": "^0.2.22",
-    "moc-governance": "git+ssh://git@github.com:money-on-chain/Areopagus-Governance.git#v0.3.1-optimizer",
+    "moc-governance": "https://github.com/money-on-chain/Areopagus-Governance.git#v0.3.1-optimizer",
     "openzeppelin-eth": "2.1.3",
     "openzeppelin-solidity": "2.3.0",
     "zos": "2.3.1",
