--- a/scripts/deploy/upgrade_v0.1.14/deployConfig-rskMocMainnet2.json
+++ b/scripts/deploy/upgrade_v0.1.14/deployConfig-rskMocMainnet2.json
@@ -3,14 +3,14 @@
     "MoC": "0xf773B590aF754D597770937Fa8ea7AbDf2668370"
   },
   "implementationAddresses": {
-    "MoC": "",
+    "MoC": "0x2ef12B6488600D46Bb271A6eA5ba08dd980e60C5",
     "MoCHelperLib": "0x592b84710955C9561008D137a5403E1dd9A222D8",
     "ProxyAdmin": "0x009C51E1f6feDcDB8014Ea9AE1E39B6dbF2AC0EC",
     "UpgradeDelegator": "0x5cE577f6Ec969CE9a282838D350206C52A6F338C",
-    "Governor": "0xC61F0392d5170214b5D93C0BC4c4354163aBC1f7"
+    "Governor": "0x3b8853DF65AfBd94853E6D77ee0Ab5590F41bB08"
   },
   "changerAddresses": {
-    "Changer": ""
+    "Changer": "0x5B1D03983D6b59641274CB759d5fbd4C3BBD28eA"
   },
-  "governorOwnerAddress": "0xC61820bFB8F87391d62Cd3976dDc1d35e0cf7128"
+  "governorOwnerAddress": "0x65a5681bE95d212F0c90eAd40170D8277de81169"
 }
