--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "@thinkanddev/solidoc": "^3.0.1",
-    "eth-gas-reporter": "^0.2.22",
-    "moc-governance": "git+ssh://git@github.com:money-on-chain/Areopagus-Governance.git#v0.3.1-optimizer",
+    "eth-gas-reporter": "0.2.22",
+    "moc-governance": "https://github.com/money-on-chain/Areopagus-Governance.git#v0.3.1-optimizer",
     "openzeppelin-eth": "2.1.3",
     "openzeppelin-solidity": "2.3.0",
     "zos": "2.3.1",
