--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
         with:
           node-version: '8.17.0'
       - name: Install build develop
-        run: sudo apt-get install build-essential
+        #run: sudo apt-get install build-essential
+        run: sudo apt-get install make gcc g++ python git bash
       - name: Git setup
         run: git config --global url."https://".insteadOf git://
       - run: npm ci
