--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,13 @@
-name: Test
+name: CI Test
 
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
 
 jobs:
   build:
@@ -9,7 +15,6 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - name: Install build develop
-        #run: sudo apt-get install build-essential
         run: sudo apt-get install make gcc g++ python3 git bash
       - name: Git setup
         run: git config --global url."https://".insteadOf git://
