fix: Github workflow CI Test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,6 @@ jobs:
         with:
           node-version: '8.17.0'
       - run: npm ci
+      - run: npm solium
+      - run: npm eslint
       - run: npm test
