--- a/scripts/deploy/upgrade_v0.1.15/deployConfig-rskAlphaTestnet.json
+++ b/scripts/deploy/upgrade_v0.1.15/deployConfig-rskAlphaTestnet.json
@@ -33,23 +33,44 @@
       "commissionAddress": "0xce4548BC0b865197D94E15a5440299398aB9d32E",
       "bitProRate": "191414800000000",
       "commissionRates": {
-        "MINT_BPRO_FEES_RBTC": 0.002,
-        "REDEEM_BPRO_FEES_RBTC": 0.002,
-        "MINT_DOC_FEES_RBTC": 0.002,
-        "REDEEM_DOC_FEES_RBTC": 0.002,
-        "MINT_BTCX_FEES_RBTC": 0.002,
-        "REDEEM_BTCX_FEES_RBTC": 0.002,
-        "MINT_BPRO_FEES_MOC": 0.001,
-        "REDEEM_BPRO_FEES_MOC": 0.001,
-        "MINT_DOC_FEES_MOC": 0.001,
-        "REDEEM_DOC_FEES_MOC": 0.001,
-        "MINT_BTCX_FEES_MOC": 0.001,
-        "REDEEM_BTCX_FEES_MOC": 0.001
+        "MINT_BPRO_FEES_RBTC": 0.003,
+        "REDEEM_BPRO_FEES_RBTC": 0.003,
+        "MINT_DOC_FEES_RBTC": 0.003,
+        "REDEEM_DOC_FEES_RBTC": 0.003,
+        "MINT_BTCX_FEES_RBTC": 0.003,
+        "REDEEM_BTCX_FEES_RBTC": 0.003,
+        "MINT_BPRO_FEES_MOC": 0.002,
+        "REDEEM_BPRO_FEES_MOC": 0.002,
+        "MINT_DOC_FEES_MOC": 0.002,
+        "REDEEM_DOC_FEES_MOC": 0.002,
+        "MINT_BTCX_FEES_MOC": 0.002,
+        "REDEEM_BTCX_FEES_MOC": 0.002
+      }
+    },
+    "ROC": {
+      "MoCInrate": "0x2B57fb820601655ca7Da16a5134db4780Aa93E74",
+      "riskProInterestAddress": "0x0780Cc1dd3e1E0d9b6c8C72EB71c3468486d0C2f",
+      "commissionAddress": "0x83be6Ad5C6156CDA1644957925B3888FB875c69c",
+      "riskProRate": "191414800000000",
+      "commissionRates": {
+        "MINT_RISKPRO_FEES_RESERVE": 0.004,
+        "REDEEM_RISKPRO_FEES_RESERVE": 0.004,
+        "MINT_STABLETOKEN_FEES_RESERVE": 0.004,
+        "REDEEM_STABLETOKEN_FEES_RESERVE": 0.004,
+        "MINT_RISKPROX_FEES_RESERVE": 0.004,
+        "REDEEM_RISKPROX_FEES_RESERVE": 0.004,
+        "MINT_RISKPRO_FEES_MOC": 0.003,
+        "REDEEM_RISKPRO_FEES_MOC": 0.003,
+        "MINT_STABLETOKEN_FEES_MOC": 0.003,
+        "REDEEM_STABLETOKEN_FEES_MOC": 0.003,
+        "MINT_RISKPROX_FEES_MOC": 0.003,
+        "REDEEM_RISKPROX_FEES_MOC": 0.003
       }
     }
   },
   "changerAddresses": {
-    "FeeIncreaseProposal": "0xD45b0561e4E3848adAF23305dbeF0B36a8363808"
+    "FeeIncreaseProposal": "0xD45b0561e4E3848adAF23305dbeF0B36a8363808",
+    "FeeIncreaseProposalCombined": "0x3636f7cF7De3f14897331A63636F0F1e9FB70fF5"
   },
   "governorOwnerAddress": "0x7D124cC0f59aDA5793AD8edA9eD1836cB7e797a3"
 }
