--- a/scripts/deploy/upgrade_v0.1.15/deployConfig-rskMocMainnet2.json
+++ b/scripts/deploy/upgrade_v0.1.15/deployConfig-rskMocMainnet2.json
@@ -16,21 +16,21 @@
     "outputProportion_1": "500000000000000000"
   },
   "proxyAddresses": {
-    "CommissionSplitterV3": "",
-    "CommissionSplitterV2": ""
+    "CommissionSplitterV3": "0x541a9c9E4985Fa2DD0Ada54d3ad0115333Ccd393",
+    "CommissionSplitterV2": "0x81893C94E41b9D1dAAE96f8894ebBB4946d8bC72"
   },
   "implementationAddresses": {
     "ProxyAdmin": "0x009C51E1f6feDcDB8014Ea9AE1E39B6dbF2AC0EC",
     "UpgradeDelegator": "0x5cE577f6Ec969CE9a282838D350206C52A6F338C",
     "Governor": "0x3b8853DF65AfBd94853E6D77ee0Ab5590F41bB08",
-    "CommissionSplitterV2": "",
-    "CommissionSplitterV3": ""
+    "CommissionSplitterV2": "0x86aCDeEAd366775Bc0e80AccAAF036a5de6e3E19",
+    "CommissionSplitterV3": "0x5b4d54517132966B0e06AAd64e613ED00A89E761"
   },
   "FeeIncreaseProposal": {
     "MOC": {
       "MoCInrate": "0xc0f9B54c41E3d0587Ce0F7540738d8d649b0A3F3",
-      "bitProInterestAddress": "<CommissionSplitterV3>",
-      "commissionAddress": "<CommissionSplitterV2>",
+      "bitProInterestAddress": "0x541a9c9E4985Fa2DD0Ada54d3ad0115333Ccd393",
+      "commissionAddress": "0x81893C94E41b9D1dAAE96f8894ebBB4946d8bC72",
       "bitProRate": "196200000000000",
       "commissionRates": {
         "MINT_BPRO_FEES_RBTC": 0.002,
@@ -49,8 +49,8 @@
     },
     "ROC": {
       "MoCInrate": "0x1DaB07c4FD07d6eE1359a5198ACa2DEe64F371f3",
-      "riskProInterestAddress": "<CommissionSplitterV3>",
-      "commissionAddress": "<CommissionSplitterV2>",
+      "riskProInterestAddress": "0x22E7E9a24D230bEBd569e9f376Ee08f5c448880e",
+      "commissionAddress": "0xF7FdF7F777c43CD31C4c37Ee851F08A51ABd2DB5",
       "riskProRate": "196200000000000",
       "commissionRates": {
         "MINT_RISKPRO_FEES_RESERVE": 0.002,
@@ -69,7 +69,8 @@
     }
   },
   "changerAddresses": {
-    "FeeIncreaseProposal": ""
+    "FeeIncreaseProposal": "",
+    "FeeIncreaseProposalCombined": "0xb696960377559B64F58748F22B2816195A2835cC"
   },
   "governorOwnerAddress": "0x65a5681bE95d212F0c90eAd40170D8277de81169"
 }
